samples/_failures_safe/1761298567_89aac3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65f75598.c: In function ‘main’:
./samples/SAFE/__tmp_65f75598.c:150:5: error: expected declaration or statement at end of input
  150 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_65f75598.c:150:5: error: expected declaration or statement at end of input
